[tool.poetry]
name = "derek-connexion"
version = "0.0.1"
description = ""
authors = ["Benjamin Woods <ben@bjqw.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "api/v0", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
connexion = {extras = ["flask", "swagger-ui"], version = "^3.0.5"}
a2wsgi = "^1.9.0"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.0.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
